feat: update security configuration, enhance CORS settings, and improve mission UI components